TEST_PROGRAMS/INVALID/mathieu_boucher/invalid3.min
#wrong order of declarations and statements

var x : int;

x = 6;

var y : float;
